# meraki

./: .gitignore  app.json  index.js  package-lock.json  package.json  pyproject.toml
android/: gradle.properties  settings.gradle
android/app/: _BUCK  build.gradle  key.jks
android/app/src/debug/java/com/meraki/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/meraki/: MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml  styles.xml
ios/: Podfile
ios/meraki/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
ios/meraki.xcodeproj/: project.pbxproj
ios/meraki.xcodeproj/xcshareddata/xcschemes/: meraki.xcscheme
ios/meraki.xcworkspace/: contents.xcworkspacedata
ios/merakiTests/: merakiTests.m
meraki/: asgi.py  custom_storages.py  settings.py  urls.py  wsgi.py
meraki/core/: views.py
product/: models.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_product.py  0003_remove_category_slug_remove_product_slug_and_more.py
src/: App.tsx  types.ts
src/components/: Appbar.tsx  ItemCard.tsx  Loading.tsx  TabNavigator.tsx
src/pages/: AuthPage.tsx  CatalogPage.tsx  FavoritesPage.tsx  HistoryPage.tsx  HomePage.tsx  ItemPage.tsx
src/store/: store.ts  token.ts
